Improve Mostion detection, filtering noise

--- a/SAP/SAP/SAP.csproj
+++ b/SAP/SAP/SAP.csproj
@@ -84,9 +84,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ColorObject.cs" />
     <Compile Include="MatchUtil.cs" />
     <Compile Include="ObejctTrack.cs" />
     <Compile Include="SurfUtil.cs" />
+    <Compile Include="Tracking.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -137,9 +139,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="model.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="penalty.mp4">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
